namespace-hello-world/hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hello-world
